# repo_worklog_skill

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.git-worklog/: config.json  index.md
.git-worklog/days/: 2026-07-15.md  2026-07-16.md  2026-07-17.md
.github/workflows/: ci.yml
docs/: naming-conventions.md
git-worklog/: SKILL.md
git-worklog/agents/: openai.yaml
git-worklog/git_worklog/: config.py  dates.py  language.py  markers.py  paths.py  preview.py  providers.py  writer.py
git-worklog/git_worklog/analysis/: __init__.py  coverage.py  history.py  manifest.py  refs.py  results.py  worktree.py
git-worklog/git_worklog/cli/: __init__.py  analyze.py  apply.py  coverage.py  doctor.py  migrate.py  preview.py  refs.py  reindex.py  validate.py
git-worklog/git_worklog/data/: provider_models.json
git-worklog/references/: analysis-pipeline.md  code-analysis-rules.md  date-parameter-contract.md  interaction-flow.md  provider-models.md  report-mode.md  subagent-contract.md  worklog-format.md
git-worklog/scripts/: build_analysis_manifest.py  check_worklog_coverage.py  collect_day_results.py  collect_git_history.py  inspect_worktree.py  migrate_legacy_worklog.py  preview_state.py  rebuild_worklog_index.py  resolve_date_range.py  resolve_provider_model.py  resolve_ref_range.py  update_daily_worklog.py  validate_daily_worklog.py  validate_worklog_index.py  worklog_markers.py
repo_worklog/: SKILL.md
repo_worklog/agents/: openai.yaml
repo_worklog/config/: provider_models.json
repo_worklog/references/: code-analysis-rules.md  date-parameter-contract.md  interaction-flow.md  provider-models.md  report-mode.md  subagent-contract.md  worklog-format.md
repo_worklog/scripts/: build_analysis_manifest.py  collect_day_results.py  collect_git_history.py  inspect_worktree.py  preview_state.py  resolve_date_range.py  resolve_provider_model.py  update_worklog.py  validate_worklog.py  worklog_markers.py
tests/: helpers.py  test_analyze_cli.py  test_build_skill_zip.py  test_cli.py  test_day_results.py  test_git_collection.py  test_language.py  test_migrate.py  test_pipeline.py  test_preview.py  test_provider_models.py  test_report_scope.py  test_worklog_engine.py
tools/: build_skill_zip.py
